# qt-mysql-coursemanage

./: CMakeLists.txt  Readme.md  icon.rc  version.rc
include/: dbmanager.h  loginwindow.h  registerstudent.h  registerwindow.h  studentcourseselect.h  studentinformation.h  studentwindow.h  teacheraddnewcourse.h  teacheraddnewcourseinfo.h  teacherinfomation.h  teacherwindow.h  utils.h
src/: dbmanager.cpp  loginwindow.cpp  main.cpp  registerstudent.cpp  registerwindow.cpp  studentcourseselect.cpp  studentinformation.cpp  studentwindow.cpp  teacheraddnewcourse.cpp  teacheraddnewcourseinfo.cpp  teacherinfomation.cpp  teacherwindow.cpp  utils.cpp
ui/: loginwindow.ui  registerstudent.ui  registerwindow.ui  studentcourseselect.ui  studentinformation.ui  studentwindow.ui  teacheraddnewcourse.ui  teacheraddnewcourseinfo.ui  teacherinfomation.ui  teacherwindow.ui
